--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog & Cat Reddit</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dog & Cat Reddit</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>🐶🐱 Dog & Cat Reddit</h1>
-    </header>
+<header>
+  <h1>🐶🐱 Dog & Cat Reddit</h1>
+  <nav>
+    <button class="tab active" data-type="all">All</button>
+    <button class="tab" data-type="dog">Doggos 🐶</button>
+    <button class="tab" data-type="cat">Cattos 🐱</button>
+  </nav>
+</header>
 
-    <main>
-        <section class="new-post">
-            <h2>Create a Post</h2>
-            <input id="post-title" placeholder="Post title">
-            <textarea id="post-content" placeholder="Post content"></textarea>
-            <select id="post-type">
-                <option value="dog">Dog</option>
-                <option value="cat">Cat</option>
-            </select>
-            <button id="create-post">Post</button>
-        </section>
+<main>
+  <aside>
+    <h3>Sort Posts</h3>
+    <button id="sort-new" class="sort-btn active">New 🆕</button>
+    <button id="sort-top" class="sort-btn">Top 🔝</button>
+  </aside>
 
-        <section class="posts">
-            <h2>All Posts</h2>
-            <div id="posts-container"></div>
-        </section>
-    </main>
+  <section class="new-post">
+    <h2>Create a Post</h2>
+    <input id="post-title" placeholder="Title">
+    <textarea id="post-content" placeholder="Content"></textarea>
+    <input id="post-image" placeholder="Image URL (optional)">
+    <select id="post-type">
+      <option value="dog">Dog</option>
+      <option value="cat">Cat</option>
+    </select>
+    <button id="create-post">Post</button>
+  </section>
 
-    <script src="script.js"></script>
+  <section class="posts" id="posts-container"></section>
+</main>
+
+<script src="script.js"></script>
 </body>
 </html>
