--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dog & Cat Reddit</title>
+<title>Pawdit - Dog & Cat Reddit</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-  <h1>🐶🐱 Dog & Cat Reddit</h1>
+  <h1>Pawdit 🐶🐱</h1>
   <nav>
     <button class="tab active" data-type="all">All</button>
     <button class="tab" data-type="dog">Doggos 🐶</button>
@@ -18,7 +18,7 @@
 
 <main>
   <aside>
-    <h3>Sort Posts</h3>
+    <h2>Sort Posts</h2>
     <button id="sort-new" class="sort-btn active">New 🆕</button>
     <button id="sort-top" class="sort-btn">Top 🔝</button>
   </aside>
@@ -35,7 +35,9 @@
     <button id="create-post">Post</button>
   </section>
 
-  <section class="posts" id="posts-container"></section>
+  <section class="posts" id="posts-container">
+    <!-- Posts will appear here -->
+  </section>
 </main>
 
 <script src="script.js"></script>
